getting headings number to fit on small devices, and stay in fixed width

--- a/ui/src/app/component/test/test.component.scss
+++ b/ui/src/app/component/test/test.component.scss
@@ -19,6 +19,22 @@
   margin-bottom: 29px;
 }
 
+.heading-degrees {
+  font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
+  font-size: 1.15em;
+  display: inline-block;
+  text-align: end;
+  min-width: 3ch;
+}
+
+.speed {
+  font-family: 'Roboto Mono', 'Courier New', Courier, monospace;
+  font-size: 1.15em;
+  display: inline-block;
+  text-align: end;
+  min-width: 5ch;
+}
+
 .manual-controls>button {
   padding-top: 30px;
   padding-bottom: 28px;
